# inoculation-adapters

./: .gitignore  README.md  pod-requirements.in  pyproject.toml  report.md
.github/workflows/: ci.yml
experiments/leaky_backdoor/: README.md  build_data.py  data_builders.py  headline_figure.py  pod_pipeline.py  report.md  run_experiment.py  score_results.py
experiments/leaky_backdoor/results/lr3e-5_ep1/: ia_validation.json
experiments/leaky_backdoor/results/repro-2026-07-16-lr3e-5_ep1/: REPRO.md  ia_validation.json  summary.json
infra/: pod-constraints.txt  pod-requirements.in  pod-requirements.txt
results/lr1e-4_ep2/: ia_validation.json  summary.json
results/lr3e-5_ep1/: summary.json
runs/: graph.json  manifest.json  status.html
runs/build_data/: 0.progress.json  _node.progress.json
runs/pod_run/: 0.progress.json  _node.progress.json
runs/score/: 0.progress.json  _node.progress.json
scripts/: build_data.py  headline_figure.py  pod_pipeline.py  run_experiment.py  score_results.py
src/ia_mini/: __init__.py  core.py  data.py  elicitation.py  methods.py  score.py  utils.py
src/inoc/: __init__.py  core.py  generate.py  train.py
tests/: test_core.py  test_methods.py  test_score.py  test_train.py
