[project]
name = "ia-mini"
version = "0.1.0"
description = "Minimal re-implementation of slacki-ai/inoculation-adaptors: frozen inoculation adapters vs inoculation prompting"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.19",
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.3",
    "transformers>=4.44",
    "peft>=0.11",
    "accelerate>=0.30",
]
dev = [
    "pytest>=8",
    "matplotlib>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ia_mini"]
