[project]
name = "inoc"
version = "0.1.0"
description = "Minimal re-implementation of slacki-ai/inoculation-adaptors: frozen inoculation adapters vs inoculation prompting"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.19",
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.3",
    "transformers>=4.44",
    # Bounded: apply() leans on peft's multi-active-adapter composition and
    # clean unload(); CI runs the invariant tests at both ends of this range.
    "peft>=0.19.1,<0.21",
    "accelerate>=0.30",
]
dev = [
    "pytest>=8",
    "matplotlib>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inoc"]
